aws/angular-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp
spec:
  replicas: 1  # Adjust the number of replicas as per your requirements
  selector:
    matchLabels:
      app: angularapp
  template:
    metadata:
      labels:
        app: angularapp
    spec:
      containers:
        - name: angular-app-container
<<<<<<< HEAD
          image: elfn/food-delivery-app:latest.18
=======
          image: elfn/food-delivery-app:1
>>>>>>> 5d17a1dc3b22dd0301fb8751e41d5dea835842bf
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              hostPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angularapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
