aws/eureka-manifest.yaml
# Service pour exposer le service de découverte Eureka à d'autres composants au sein du cluster ou à l'extérieur
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: eureka-service
spec:
  ports:
    - protocol: TCP
      port: 8761 # Port d'exposition du service
      targetPort: 8761 # Port cible du pod Eureka à rediriger
  selector:
    app: eureka # Sélectionne les pods à exposer basés sur ce label
