aws/food-catalogue-manifest.yaml

# Service exposant l'application foodcatalogueapp sur un réseau
apiVersion: v1
kind: Service
metadata:
  name: foodcatalogue-service
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: foodcatalogueapp
